# smartmet-library-newbase

./: .gitignore  CLAUDE.md  CMakeLists.txt  FEATURES.md  Jenkinsfile  Makefile  README.md  smartmet-library-newbase.spec
.circleci/: build.sh  config.yml  localbuild.sh
docs/: querydata.md
newbase/: NFmiAngle.cpp  NFmiAngle.h  NFmiArea.cpp  NFmiArea.h  NFmiAreaFactory.cpp  NFmiAreaFactory.h  NFmiAreaMask.cpp  NFmiAreaMask.h  NFmiAreaMaskHelperStructures.cpp  NFmiAreaMaskHelperStructures.h  NFmiAreaMaskImpl.cpp  NFmiAreaMaskImpl.h  NFmiAreaMaskList.cpp  NFmiAreaMaskList.h  NFmiAreaTools.cpp  NFmiAreaTools.h  NFmiAzimuthalArea.cpp  NFmiAzimuthalArea.h  NFmiBitMask.cpp  NFmiBitMask.h  NFmiBitmapAreaMask.cpp  NFmiBitmapAreaMask.h  NFmiBox.cpp  NFmiBox.h  NFmiCalculatedAreaMask.cpp  NFmiCalculatedAreaMask.h  NFmiCalculationCondition.cpp  NFmiCalculationCondition.h  NFmiCalculator.cpp  NFmiCalculator.h  NFmiCmdLine.cpp  NFmiCmdLine.h  NFmiCombinedParam.cpp  NFmiCombinedParam.h  NFmiCommentStripper.cpp  NFmiCommentStripper.h  NFmiCoordinateMatrix.cpp  NFmiCoordinateMatrix.h  NFmiCoordinateTransformation.cpp  NFmiCoordinateTransformation.h  (+323 more)
python/: .gitignore  Makefile  newbase-binding.py  newbase-binding.sym  test_data.sqd.xz  test_newbase.py
test/: Makefile  NFmiAngleTest.cpp  NFmiAreaFactoryTest.cpp  NFmiDataIntegratorTest.cpp  NFmiEnumConverterTest.cpp  NFmiFastQueryInfoTest.cpp  NFmiFileSystemTest.cpp  NFmiGdalAreaTest.cpp  NFmiGeoToolsTest.cpp  NFmiGridTest.cpp  NFmiHPlaceDescriptorTest.cpp  NFmiIndexMaskSourceTest.cpp  NFmiIndexMaskTest.cpp  NFmiMercatorAreaTest.cpp  (+18 more)
